Updated pipeline & added synthetic simulation scripts

--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,23 @@ lc
 csv
 light_curve
 ExampleFitter
+2011_ergcm2s
+2012
+2012_ergcm2s
+2012_ergcm2s_def
+2012_ergcm2s_def_results
+2013
+data_200_lc
+data_200_lc_2
+data_500_lc
+data_results
+data_results_100
+plot_test_analysis_200lc_100
+scatterplot_pars
+test_analysis_100
+test_analysis_results
+Example_Fitter_GRB050315.py
+Example_Fitter_prova.py
+GRB050315_new.csv
+lightcurve.py
+prepare_data_swift.py
