Re-bin and flare analysis

--- a/.gitignore
+++ b/.gitignore
@@ -212,11 +212,6 @@ ExampleFitter
 2012_ergcm2s_def
 2012_ergcm2s_def_results
 2013
-data_200_lc
-data_200_lc_2
-data_500_lc
-data_results
-data_results_100
 plot_test_analysis_200lc_100
 scatterplot_pars
 test_analysis_100
@@ -226,3 +221,21 @@ Example_Fitter_prova.py
 GRB050315_new.csv
 lightcurve.py
 prepare_data_swift.py
+results*
+data_*
+20*
+ExampleFitter.py
+GRB_*
+SSC_*
+plot_flares
+plot
+plot_slopes_13_20
+flare_analysis
+hist.py
+info_*
+lc_GRB*
+slopes_times*
+strange_p
+test_analysis_results
+test_lc_diag_real
+
